# StereoVisionMultiWay

./: CMakeLists.txt  README.md
analysis/: warmup_100_iter_1000.csv
analysis/.ipynb_checkpoints/: AllAlgosAnalysis-checkpoint.ipynb
data/: README.txt
data/conesH/: im3.ppm  im4.ppm  im5.ppm  im7.ppm  im8.ppm
include/: AlignmentAllocator.hpp  CommonArgumentParser.hpp  CudaDisparityMapGenerator.hpp  CudaFunctions.h  CudaSimdDisparityMapGenerator.hpp  CudaSimdFunctions.h  DisparityMapAlgorithmParameters.hpp  DisparityMapGenerator.hpp  DisparityMapGeneratorFactory.hpp  OpenClDisparityMapGenerator.hpp  OpenMpThreadedDisparityMapGenerator.hpp  OpenMpThreadedSimdDisparityMapGenerator.hpp  SingleThreadedDisparityMapGenerator.hpp  SingleThreadedSimdDisparityMapGenerator.hpp
src/: CommonArgumentParser.cpp  CudaDisparityMapGenerator.cpp  CudaFunctions.cu  CudaSimdDisparityMapGenerator.cpp  CudaSimdFunctions.cu  DisparityMapGeneratorFactory.cpp  GenerateDisparityVisualization.cpp  OpenClDisparityMapGenerator.cpp  OpenClFunctions.cl  OpenMpThreadedDisparityMapGenerator.cpp  OpenMpThreadedSimdDisparityMapGenerator.cpp  SingleThreadedDisparityMapGenerator.cpp  SingleThreadedSimdDisparityMapGenerator.cpp  SpeedTest.cpp  TestSadSimd.cpp
